<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/twospaces"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/fourspaces"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="63dp"
        android:background="@android:color/darker_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_empresa"
            android:textSize="22dp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_desarrollador"
            android:textSize="22dp"
            android:textColor="@android:color/black"
            />
        <ImageView

            android:src="@drawable/imahonda"
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_version"
            android:textSize="22dp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_email"
            android:textSize="22dp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_telefono"
            android:textSize="22dp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_gracie"
            android:textSize="25dp"
            android:textColor="@android:color/holo_red_dark"
            />



    </LinearLayout>
</android.support.constraint.ConstraintLayout>