<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_thanks">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/twospaces"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/fourspaces"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="63dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="false"
        android:text="@string/text_thanks"
        android:textSize="45dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_opinion"
        android:textSize="25dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btn_cerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/buttonsColor"
        android:text="@string/btn_close"
        android:textColor="@color/white"
        android:textSize="20dp" />
</LinearLayout>

</android.support.constraint.ConstraintLayout>