<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_questions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/twospaces"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/fourspaces"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="63dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_uno"
            android:textSize="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/onespace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_dos"
            android:textSize="25dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGrupo"
            android:orientation="horizontal"
            >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Si"
                android:id="@+id/radiobutton1"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radiobutton2"
                android:text="No"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_tres"
            android:textSize="25dp" />

        <EditText
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/onespace"
            android:lines="20"
            android:minLines="3"
            android:padding = "5dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonsColor"
            android:text="@string/btn_enviar"
            android:textColor="@color/white"
            android:id="@+id/btn_ir"
            android:textSize="20dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>